--- a/app/src/main/res/layout/activity_datum.xml
+++ b/app/src/main/res/layout/activity_datum.xml
@@ -13,11 +13,7 @@
         android:layout_height="40dp"
         android:background="@color/top_color">
 
-        <ImageView
-            android:id="@+id/iv_datum_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             style="@style/ActivityTopTextTitleStyle"
@@ -170,10 +166,10 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_margin="10dp"
                     android:text="为了您可以享受更多服务，加★项为必填项"
                     android:textColor="#ac0000"
                     android:textSize="10sp" />
