--- a/app/src/main/res/layout/activity_bound.xml
+++ b/app/src/main/res/layout/activity_bound.xml
@@ -9,21 +9,14 @@
 
     <RelativeLayout
         android:id="@+id/tl_bound_mTool"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/top_color">
+        style="@style/AcFrTopStyle">
 
-        <ImageView
-            android:id="@+id/iv_bound_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
-            android:layout_centerInParent="true"
             style="@style/ActivityTopTextTitleStyle"
-            android:text="绑定手机号"/>
+            android:layout_centerInParent="true"
+            android:text="绑定手机号" />
     </RelativeLayout>
 
     <TextView
@@ -70,14 +63,16 @@
                 android:hint="填写验证码"
                 android:phoneNumber="true" />
 
-            <Button
+            <TextView
                 android:id="@+id/bt_bound_get"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/distance"
                 android:layout_weight="1"
                 android:background="@drawable/hm_background"
-                android:text="点击获取验证码" />
+                android:gravity="center"
+                android:text="点击获取验证码"
+                android:textColor="#000" />
 
         </LinearLayout>
 
