--- a/app/src/main/res/layout/activity_my_clothess.xml
+++ b/app/src/main/res/layout/activity_my_clothess.xml
@@ -12,12 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/top_color">
-
-        <ImageView
-            android:id="@+id/iv_my_clothes_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             style="@style/ActivityTopTextTitleStyle"
