--- a/app/src/main/res/layout/activity_ywtpay.xml
+++ b/app/src/main/res/layout/activity_ywtpay.xml
@@ -11,17 +11,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/color_ac0000">
+        android:background="@color/activityTop">
 
         <include layout="@layout/btn_back"></include>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ActivityTopTextTitleStyle"
             android:layout_centerInParent="true"
-            android:text="一网通支付"
-            android:textColor="@color/write"
-            android:textSize="18sp" />
+            android:text="一网通支付" />
+
     </RelativeLayout>
 
     <com.example.huichuanyi.ui.activity.custom.YWTWebView
