--- a/app/src/main/res/layout/btn_back.xml
+++ b/app/src/main/res/layout/btn_back.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="40dp"
-    android:layout_height="match_parent"
+    android:layout_height="40dp"
     android:clickable="true"
+    android:gravity="center"
     android:onClick="back" >
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:src="@drawable/back" />
 
 </LinearLayout>
