--- a/app/src/main/res/layout/fragment_365_2.xml
+++ b/app/src/main/res/layout/fragment_365_2.xml
@@ -5,22 +5,23 @@
     android:background="#eeeeee"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/tv_365_top"
-        style="@style/AcFrTopStyle">
-
-        <TextView
-            style="@style/ActivityTopTextTitleStyle"
-            android:layout_centerInParent="true"
-            android:text="@string/fragment_365_title" />
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        android:background="@color/top_color"
+        android:gravity="center"
+        android:paddingTop="15dp"
+        android:text="@string/fragment_365_title"
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_top_title" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sf_fragment_365_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tv_365_top">
+        android:layout_below="@+id/top">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -34,10 +35,10 @@
             </android.support.v7.widget.RecyclerView>
 
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/rl_fragment_365_no_pay"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:visibility="gone">
 
                 <com.example.huichuanyi.custom.SlwWebView
                     android:id="@+id/web_fragment_365_no_pay"
