--- a/app/src/main/res/layout/fragment_order_copys.xml
+++ b/app/src/main/res/layout/fragment_order_copys.xml
@@ -12,39 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/rl">
-
-        <ScrollView
+        <WebView
+            android:id="@+id/webview_order_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
+            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        </WebView>
 
-                <com.jude.rollviewpager.RollPagerView
-                    android:id="@+id/vp_order_banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:background="@mipmap/nonepic">
-
-                </com.jude.rollviewpager.RollPagerView>
-
-                <ImageView
-                    android:id="@+id/iv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/distance_10"
-                    android:layout_marginRight="@dimen/distance_10"
-                    android:layout_marginTop="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/appointment_home_image" />
-
-            </LinearLayout>
-        </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
