--- a/app/src/main/res/layout/item_private_recommend.xml
+++ b/app/src/main/res/layout/item_private_recommend.xml
@@ -9,6 +9,7 @@
     app:contentPadding="0dp">
 
     <LinearLayout
+        android:id="@+id/ll_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
