--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
-        android:layout_height="310dp"
+        android:layout_width="330dp"
+        android:layout_height="330dp"
         app:cardBackgroundColor="#393F4E"
         app:cardCornerRadius="6dp"
         app:cardElevation="6dp"
@@ -16,6 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <ImageView
@@ -25,12 +27,25 @@
                 android:scaleType="centerCrop" />
 
             <TextView
+                android:layout_marginTop="5dp"
                 android:id="@+id/text_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:text="1111"
+                android:textColor="#fff"
+                android:textSize="14sp" />
 
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:id="@+id/text_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lines="3"
+                android:text="1111"
+                android:textColor="#fff"
+                android:textSize="10sp" />
         </LinearLayout>
 
         <RelativeLayout
