--- a/app/src/main/res/layout/activity_at_my_acitivty.xml
+++ b/app/src/main/res/layout/activity_at_my_acitivty.xml
@@ -13,19 +13,12 @@
         android:layout_height="40dp"
         android:background="@color/top_color">
 
-        <ImageView
-            android:id="@+id/iv_atmy_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ActivityTopTextTitleStyle"
             android:layout_centerInParent="true"
-            android:text="关于我们"
-            android:textColor="#fff"
-            android:textSize="@dimen/text_size_big" />
+            android:text="关于我们" />
     </RelativeLayout>
 
     <ScrollView
