--- a/app/src/main/res/layout/activity_closet.xml
+++ b/app/src/main/res/layout/activity_closet.xml
@@ -14,17 +14,13 @@
         android:layout_height="40dp"
         android:background="@color/top_color">
 
-        <ImageView
-            android:id="@+id/iv_closet_main_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             android:id="@+id/tv_yichu"
-            android:layout_centerInParent="true"
             style="@style/ActivityTopTextTitleStyle"
-            android:text="我的衣橱"/>
+            android:layout_centerInParent="true"
+            android:text="我的衣橱" />
 
         <TextView
             android:id="@+id/tv_clothes_up"
