--- a/app/src/main/res/layout/item_order_studio_normal.xml
+++ b/app/src/main/res/layout/item_order_studio_normal.xml
@@ -160,6 +160,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/top_line"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="-15dp" />
+        android:layout_marginRight="20dp" />
 </RelativeLayout>
