--- a/app/src/main/res/layout/item_order_studio_one.xml
+++ b/app/src/main/res/layout/item_order_studio_one.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/orderIntroduceBg"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_item_order_studio_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="12dp"
-        android:text="最近选择的工作室"
+        android:text="*****"
         android:textColor="#515151" />
-</LinearLayout>
+</RelativeLayout>
