--- a/app/src/main/res/layout/item_vertical_expect.xml
+++ b/app/src/main/res/layout/item_vertical_expect.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/tv_expect_recycler"
-        android:padding="3dp"
-        android:textColor="@drawable/color"
-        android:background="@drawable/high_back_ground"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_margin="3dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:gravity="center"
+        android:padding="5dp"
+        android:paddingBottom="3dp"
+        android:paddingTop="3dp"
+        android:textColor="#000000" />
 
-</LinearLayout>
+</RelativeLayout>
