--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -198,4 +198,10 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
+    <style name="HmFoodStarBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/hm_ratingstars</item>
+        <item name="android:minHeight">11dip</item>
+        <item name="android:maxHeight">10dip</item>
+    </style>
 </resources>
