--- a/app/src/main/res/layout/activity_li_ji_yu_yue_what.xml
+++ b/app/src/main/res/layout/activity_li_ji_yu_yue_what.xml
@@ -21,16 +21,16 @@
         <TextView
             style="@style/ActivityTopTextTitleStyle"
             android:layout_centerInParent="true"
-            android:text="预约"/>
+            android:text="价格明细" />
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="225dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="0.05"
         android:scaleType="fitXY"
         android:src="@mipmap/lijiyuyue_price" />
 </LinearLayout>
