--- a/app/src/main/res/layout/activity_order_studio.xml
+++ b/app/src/main/res/layout/activity_order_studio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.huichuanyi.ui.newpage.OrderStudioActivity">
+    tools:context="com.example.huichuanyi.ui.newpage.OrderStudioListActivity">
 
     <include layout="@layout/include_activity_top"></include>
 
