--- a/app/src/main/res/layout/activity_show_photo.xml
+++ b/app/src/main/res/layout/activity_show_photo.xml
@@ -14,16 +14,12 @@
         android:layout_height="40dp"
         android:background="@color/activityTop">
 
-        <ImageView
-            android:id="@+id/iv_show_photo_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             style="@style/ActivityTopTextTitleStyle"
             android:layout_centerInParent="true"
-            android:text="搭配日记"/>
+            android:text="搭配日记" />
     </RelativeLayout>
 
     <LinearLayout
