--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -25,6 +25,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tv_line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@+id/rl_order_top"
@@ -33,9 +34,10 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_line"
+        android:paddingBottom="60dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,9 +56,11 @@
                     android:id="@+id/iv_order_details_address_tip"
                     android:layout_width="23dp"
                     android:layout_height="26dp"
+                    android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:layout_margin="5dp"
-                    android:src="@mipmap/hmappointmentinfo_adress_image" />
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@mipmap/hm_order_details_address" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -72,7 +76,7 @@
                         android:layout_alignBaseline="@+id/tv_order_details_customer_phone"
                         android:layout_alignBottom="@+id/tv_order_details_customer_phone"
                         android:layout_alignParentStart="true"
-                        android:text="请添加地址"
+                        android:text="请选择地址"
                         android:textColor="#323232"
                         android:textSize="15sp" />
 
@@ -182,8 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/top_line"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="-15dp" />
+                    android:layout_marginRight="20dp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -197,12 +200,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="服饰量区间"
-                    android:textColor="#323232"
-                    android:textSize="15sp"
                     android:layout_alignBaseline="@+id/tv_order_details_count"
                     android:layout_alignBottom="@+id/tv_order_details_count"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:text="服饰量区间"
+                    android:textColor="#323232"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/tv_order_details_count"
@@ -296,7 +299,7 @@
                     android:layout_height="2dp"
                     android:textColor="#ccc" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="41dp"
                     android:background="#fff"
@@ -306,6 +309,7 @@
                     android:paddingRight="14dp">
 
                     <TextView
+                        android:id="@+id/tv_tip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -315,15 +319,24 @@
 
                     <EditText
                         android:id="@+id/et_order_details_youhuiquan"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@+id/tv_tip"
                         android:background="#fff"
                         android:hint="请您输入优惠码"
                         android:textColor="#323232"
                         android:textSize="15sp" />
-                </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_delete_money"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:textColor="#ac0000" />
+                </RelativeLayout>
             </LinearLayout>
 
             <TextView
@@ -419,7 +432,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
-                android:text="00.00"
+                android:text="¥00.00"
                 android:textColor="#ac0000"
                 android:textSize="18sp" />
 
