--- a/app/src/main/res/layout/pay_self_dialog.xml
+++ b/app/src/main/res/layout/pay_self_dialog.xml
@@ -12,14 +12,13 @@
         android:orientation="vertical">
 
         <TextView
-
             android:id="@+id/my_self_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/distance_15"
             android:gravity="center"
-            android:text="消息提示"
+            android:text="支付提示"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_18" />
 
