--- a/app/src/main/res/layout/activity_shen_qing_tui_kuan.xml
+++ b/app/src/main/res/layout/activity_shen_qing_tui_kuan.xml
@@ -14,11 +14,7 @@
         android:layout_height="40dp"
         android:background="@color/activityTop">
 
-        <ImageView
-            android:id="@+id/iv_shenqing_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             style="@style/ActivityTopTextTitleStyle"
@@ -37,63 +33,28 @@
         android:background="@drawable/hm_background"
         android:paddingBottom="@dimen/distance">
 
-        <com.example.huichuanyi.custom.RoundImageView
-            android:id="@+id/iv_shenqing_photo"
-            android:layout_width="40dp"
-            android:layout_height="46dp"
-            android:layout_margin="@dimen/distance"
-            android:src="@mipmap/stand" />
-
         <TextView
             android:id="@+id/tv_shenqing_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/distance"
             android:layout_marginTop="@dimen/distance"
-            android:layout_toRightOf="@+id/iv_shenqing_photo"
-            android:text="王达"
+            android:text="***"
             android:textColor="@color/text_color_high"
             android:textSize="@dimen/body_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/distance"
-            android:layout_marginTop="@dimen/distance"
-            android:layout_toRightOf="@+id/tv_shenqing_name"
-            android:text="衣橱管理师"
-            android:textColor="@color/text_color_high"
-            android:textSize="@dimen/body_size" />
 
-        <LinearLayout
-            android:id="@+id/ll_order_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/iv_shenqing_photo"
-            android:background="#cccccc"
-            android:orientation="horizontal"></LinearLayout>
-
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/ll_order_four"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_order_line"
             android:layout_marginTop="@dimen/distance"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_order_money"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/distance"
-                android:layout_weight="1"
-                android:text="上门服务"
-                android:textColor="@color/text_color_high"
-                android:textSize="@dimen/body_size" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="*1"
@@ -101,15 +62,16 @@
                 android:textSize="@dimen/body_size" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_marginRight="@dimen/distance"
                 android:layout_weight="1"
-                android:gravity="end"
-                android:text="￥0"
+                android:text="¥0"
                 android:textColor="@color/text_color_high"
                 android:textSize="@dimen/body_size" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/iv_order_privilege"
@@ -137,7 +99,7 @@
             android:layout_below="@+id/ll_order_four"
             android:layout_marginRight="@dimen/distance"
             android:layout_marginTop="@dimen/distance"
-            android:text="0"
+            android:text="¥0"
             android:textColor="#080808"
             android:textSize="@dimen/body_size" />
 
@@ -238,7 +200,8 @@
             android:layout_height="match_parent"
             android:background="@drawable/hm_background"
             android:gravity="start"
-            android:hint="请填写退款原因"
+            android:hint="请填写退款原因,最少10个字哦"
+            android:maxLength="80"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:textCursorDrawable="@null"
@@ -248,7 +211,7 @@
     <Button
         android:id="@+id/btn_shenqingtuikuan_sure"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/distance"
         android:layout_marginLeft="@dimen/distance"
