--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -198,6 +198,7 @@
                 android:paddingRight="14dp">
 
                 <TextView
+                    android:id="@+id/tv_qu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/tv_order_details_count"
